--- a/index.html
+++ b/index.html
@@ -158,50 +158,30 @@
           </thead>
 
           <tbody>
-            <tr>
-              <td>1st</td>
-              <td>Philip Leuchter</td>
-              <td>1643</td>
-            </tr>
-            <tr>
-              <td>2nd</td>
-              <td>Laura Williams</td>
-              <td>1529</td>
-            </tr>
-            <tr>
-              <td>3rd</td>
-              <td>John Doe</td>
-              <td>1201</td>
-            </tr>
-            <tr>
-              <td>4th</td>
-              <td>Max Meier</td>
-              <td>845</td>
-            </tr>
-            <tr>
-              <td>5th</td>
-              <td>Melania Musterfrau</td>
-              <td>823</td>
-            </tr>
-          </tbody>
-        </table>
-        <span class="table-divider">...</span>
-        <table>
-          <tbody>
-            <tr>
-              <td>12th</td>
-              <td>Maria Maler</td>
-              <td>685</td>
-            </tr>
             <tr class="own-row">
-              <td>13th</td>
+              <td>1st</td>
               <td>You</td>
               <td>645</td>
             </tr>
             <tr>
-              <td>14th</td>
-              <td>Peter Schmidt</td>
-              <td>635</td>
+              <td>2nd</td>
+              <td>Stevie Scharz</td>
+              <td>529</td>
+            </tr>
+            <tr>
+              <td>3rd</td>
+              <td>Bertram Peters</td>
+              <td>201</td>
+            </tr>
+            <tr>
+              <td>4th</td>
+              <td>Max Meier</td>
+              <td>145</td>
+            </tr>
+            <tr>
+              <td>5th</td>
+              <td>Petra Meier</td>
+              <td>23</td>
             </tr>
           </tbody>
         </table>
@@ -222,45 +202,40 @@
               <td>Philip Leuchter</td>
               <td>1643</td>
             </tr>
-            <tr>
-              <td>2nd</td>
-              <td>Laura Williams</td>
-              <td>1529</td>
-            </tr>
-            <tr>
-              <td>3rd</td>
-              <td>John Doe</td>
-              <td>1201</td>
-            </tr>
-            <tr>
-              <td>4th</td>
-              <td>Max Meier</td>
-              <td>845</td>
-            </tr>
-            <tr>
-              <td>5th</td>
-              <td>Melania Musterfrau</td>
-              <td>823</td>
-            </tr>
-          </tbody>
-        </table>
-        <span class="table-divider">...</span>
-        <table>
-          <tbody>
-            <tr>
-              <td>12th</td>
-              <td>Maria Maler</td>
-              <td>685</td>
-            </tr>
             <tr class="own-row">
-              <td>13th</td>
+              <td>2nd</td>
               <td>You</td>
               <td>645</td>
             </tr>
             <tr>
-              <td>14th</td>
+              <td>3rd</td>
+              <td>Maria Buergl</td>
+              <td>601</td>
+            </tr>
+            <tr>
+              <td>4th</td>
+              <td>Max Meier</td>
+              <td>545</td>
+            </tr>
+            <tr>
+              <td>5th</td>
+              <td>Melania Musterfrau</td>
+              <td>423</td>
+            </tr>
+            <tr>
+              <td>6th</td>
+              <td>Maria Maler</td>
+              <td>385</td>
+            </tr>
+            <tr>
+              <td>7th</td>
+              <td>You</td>
+              <td>245</td>
+            </tr>
+            <tr>
+              <td>8th</td>
               <td>Peter Schmidt</td>
-              <td>635</td>
+              <td>235</td>
             </tr>
           </tbody>
         </table>
