Styling of new challenge

--- a/newChallenge.html
+++ b/newChallenge.html
@@ -12,17 +12,12 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Raise Awareness</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="footprint.html">Footprint</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
+        <a href="#" class="brand-logo center">Raise Awareness</a>
       </div>
     </nav>
 
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top: 2em;">
         <div class="card">
           <div class="card-content">
             <span class="card-title">Fridge Competition</span>
@@ -46,7 +41,7 @@
           <div class="card">
             <div class="card-content">
               <ol>
-                <li>Scan your fridge every wednesday for the next four weeks
+                <li>Scan all items in your fridge every Wednesday for the next four weeks.
                   <i class="material-icons">kitchen</i>
                 </li>
                 <li>Lower emission costs
