--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     </nav>
 
   <div class="container">
-    <div class="row">
+    <div class="row" style="margin-top: 2em">
       <div class="col s9">
-
-        <h1>Dashboard</h1>
-
         <div class="row">
           <div class="col s5">
 
@@ -60,21 +57,21 @@
                      <div class="challenges-propsed">
                        <h5>Proposed Challenges</h5>
                        <ul class="collection">
-                         <li class="collection-item avatar" id="challenge-button">
+                         <li class="collection-item avatar challenge-button" id="challenge-button">
                            <i class="material-icons circle red">kitchen</i>
                            <span class="title">Fridge Competition</span>
                            <p>One Month <br>
                              Reduce costs as much as you can!
                            </p>
                          </li>
-                         <li class="collection-item avatar">
+                         <li class="collection-item avatar challenge-button">
                            <i class="material-icons circle">cake</i>
                            <span class="title">Cake Competition</span>
                            <p>One Day<br>
                               Bake a cake only using green ingredients!
                            </p>
                          </li>
-                         <li class="collection-item avatar">
+                         <li class="collection-item avatar challenge-button">
                            <i class="material-icons circle green">trending_down</i>
                            <span class="title">Lower Footprint</span>
                            <p>One Week<br>
