--- a/challengeEnding.html
+++ b/challengeEnding.html
@@ -16,12 +16,17 @@
       </div>
     </nav>
     <div class="container">
-      <div class="row">
+      <div class="row" style="position: relative; top: 50px">
         <div class="col s2">
-          slkdjfhsdl;f
+          <img id="crown" src="images/crown.png" alt="">
+          <img id="avatar1" src="images/avatar1.png" alt="">
+          <img id="avatar2" src="images/avatar2.png" alt="">
         </div>
         <div class="col s10">
           <canvas id="myChart"></canvas>
+        </div>
+        <div id="chartFiller">
+          
         </div>
       </div>
     </div>
