add link to dashboard in header

--- a/challengeEnding.html
+++ b/challengeEnding.html
@@ -12,7 +12,7 @@
   <body class="footprint-page">
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Raise Awareness</a>
+        <a href="index.html" class="brand-logo center">Raise Awareness</a>
       </div>
     </nav>
     <div class="container">
@@ -26,7 +26,7 @@
           <canvas id="myChart"></canvas>
         </div>
         <div id="chartFiller">
-          
+
         </div>
       </div>
     </div>
