--- a/footprint.html
+++ b/footprint.html
@@ -12,7 +12,7 @@
   <body class="footprint-page">
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Raise Awareness</a>
+        <a href="index.html" class="brand-logo center">Raise Awareness</a>
       </div>
     </nav>
     <div class="container">
