--- a/newChallenge.html
+++ b/newChallenge.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Raise Awareness</a>
+        <a href="index.html" class="brand-logo center">Raise Awareness</a>
       </div>
     </nav>
 
@@ -69,8 +69,8 @@
                   <textarea class="materialize-textarea active" id="message_text">
   Hey there,
 
-  I bet you can’t beat me in being green. But let’s have a try. 
-  We both try to lower our footprint and the one with the greater improvements wins. I throw in a restaurant visit as a reward. 
+  I bet you can’t beat me in being green. But let’s have a try.
+  We both try to lower our footprint and the one with the greater improvements wins. I throw in a restaurant visit as a reward.
 
   What do you think?</textarea>
                   <label for="message_text">Message</label>
